# renfield-mcp-samsung

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  conftest.py  main.py  pyproject.toml  tv.py
tests/: test_tv.py
